# aim-email-triage

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  inference.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_inference.py  test_platform.py  vite.config.js
.github/workflows/: sync.yml
.hypothesis/constants/: 002e0bceef72e105  004e722d2b39195a  0053b40976e936fc  005be612047aa41d  006b559781a41f7f  0072036a8ef2811e  00802ead2fd01335  008627a8fb629140  009f0116eab76fe1  009f7a1122aa4f57  00e18520cc15a41c  0104e49ae3e6d53d  0111c1fb9c822453  0128603b5e7a94c2  0140297e352ccb6f  0157c07d9b10e324  015e5e733f4d8429  016af87f794a90e9  0180d0179b1e0750  01b21858bc84ad91  01ba85f6eebc85d8  01c067336e9c0e8e  01c35a5996e3e8aa  01e17e88cee170ff  01e5ecd9fe6b2c81  01f0a8720e152f49  01fbad1622e4e53b  020bd4b9cc3144b7  021c897c79c04024  0221ac1d32810d42  02255c911b9f7bbc  022d71bfc30b1c15  02361c7d2d1bf455  023942a02c7311db  02485be7e19a158b  025066418d5f7345  0256ad1b699cb048  025c876b6e0ab5a5  027e67fbafbfa3fc  029450832f194794  (+4791 more)
.hypothesis/tmp/: tmpbq6zpc6u  tmpgc1rfzmk  tmpj17yz19i  tmpnr79vabw  tmpth6s7e_s
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
env/: __init__.py  email_generator.py  env.py  grader.py  models.py  reward.py
server/: app.py
src/: App.jsx  index.css
src/pages/: About.jsx  (+4 more)
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_inference_properties.py
training/: plot_metrics.py  scores.json  train.py
(+17 files in other folders)
