[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "OpenEnv RL Email Triage — AIM-Env"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]

[tool.mypy]
follow_imports = "silent"
