[project]
name = "aim-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
